Tue Dec 17 16:19:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_trace.c (rb_postponed_job_flush): isolate exceptions in
	  postponed jobs and restore outer ones.  based on a patch by
	  tarui.  [ruby-core:58652] [Bug #9168]

Tue Dec 17 10:48:04 2013  Aman Gupta <ruby@tmm1.net>

	* configure.in (RUBY_DTRACE_POSTPROCESS): Fix compatibility with
	  systemtap on linux. stap requires `dtrace -G` post-processing, but
	  the dtrace compatibility wrapper is very strict about probes.d
	  syntax.

Tue Dec 17 05:18:17 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 1c5f4b3.  Allows rubygems
	  repackagers to disable backward-compatible shared gem directory
	  behavior.
	* test/rubygems:  ditto.

Tue Dec 17 05:14:35 2013  Eric Hodel  <drbrain@segment7.net>

	* NEWS (RDoc):  Update version number so I don't have to change it
	  for the final release.

Mon Dec 16 19:19:19 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_markable_object_p): should check special_const_p
	  first (by is_markable_object()).

Mon Dec 16 19:12:54 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (reachable_object_from_root_i): use
	  compare_by_identity hash to avoid hash modify problem
	  during iteration.
	  [Bug #9252]

	* ext/objspace/objspace.c (reachable_objects_from_root): ditto.

Mon Dec 16 18:16:28 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_verify_internal_consistency): should not use
	  rb_objspace_each_objects() because it call rest_sweep().

Mon Dec 16 18:07:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_markable_object_p): fix last commit (build error).

Mon Dec 16 18:04:28 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_markable_object_p): it should be live objects.

Mon Dec 16 18:00:51 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_each_objects): should not clear dont_lazy_sweep
	  flag in nested case.

Mon Dec 16 16:40:35 2013  Koichi Sasada  <ko1@atdot.net>
